# convst

./: .gitignore  .readthedocs.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  sanstitre0.py  setup.py  untitled2.py
CST/: convolutional_ST.py  random_shapelets.py
Examples/: ArrowHead_example.py  GunPoint_example.py  Special case testing.ipynb  UCR_UEA_example.py  UCR_example.py  cv_all_data.py  cv_train_test_split_only.py  dataset_generation.py  distance_benchmark.ipy  generate_figure_from_csv.py  generate_paper_figures.py  params_cv.py  plot_prime_use.py
Figures/: README.md  generate_benchmark_figures.py  generate_cv_figures.py  generate_paper_figures.py  generate_rank_figures.py  scene.py
Paper scripts/: cv_all_data.py  generate_cv_figures.py  generate_rank_figures.py  params_cv.py
PaperScripts/: README.md  ThesisScript.py  benchmark.py  cv_all_data.py  cv_all_old.py  early_vs_material.py  generate_benchmark_figures.py  generate_cv_figures.py  generate_paper_figures.py  generate_rank_figures.py  params_cv.py  test_RoT.py  test_dummies.py  test_ensemble.py  test_euc.py  test_ifg.py  test_invariances.py  test_models.py  test_multivariate.py  test_on_arff_resamples.py  test_subsampling.py
benchmarks/: README.md  df_perf.csv  make_plots.py  perf_acc.md  perf_f1.md  perf_runtime.md  performance.py
convst/: __init__.py
docs/: api.rst  citation.rst  conf.py  index.rst  install.rst  introduction.rst  reproducibility.rst  requierments.txt  user_guide.rst
examples/: Changing_numba_options.py  README.rst  Special case testing.ipynb  UCR_example.py
results/: CV_30_rdst.csv  CV_30_results_ensemble.csv  CV_30_results_ensemble_no_bounds_no_prime_log.csv  CV_30_results_ensemble_no_bounds_prime_log.csv  CV_30_results_v_0_2_5.csv  README.md  SOTA-AverageOver30.csv  TSC_dataset_info.csv  early_abandon_benchmark.csv  early_abandon_benchmark_py.csv  n_samples_benchmarks.csv  n_timepoints_benchmarks.csv  params_csv.csv
tests/: test_RDST.py  test_check_utils.py  test_checks_utils.py  test_rdst.py  (+4 more)
(+110 files in other folders)
